--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -47,3 +47,9 @@ body {
 .navbar-brand {
 	color: blue !important;
 }
+
+#yourElement {
+	-vendor-animation-duration: 3s;
+	-vendor-animation-delay: 2s;
+	-vendor-animation-iteration-count: infinite;
+}
